CollectionCatalog can't replace a collection with a view in the same WriteUnitOfWork

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: 7.0.0, 8.0.0, 8.3.0-rc0, 8.2.0
    • Component/s: Catalog
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2025-12-08, CAR Team 2025-12-22
    • 🟦 Shard Catalog
    • None
    • None
    • None
    • None
    • None
    • None

      Within a single WriteUnitOfWork:

      • Dropping or renaming a collection at a given NSS
      • Then re-creating that NSS as a view

      Fails with a NamespaceExists error. 

       

      This happens because in multiple checks, the CollectionCatalog will throw if a collection is registered/durable at that NSS, without checking if the collection has been dropped within the current WUOW.

            Assignee:
            Joan Bruguera Micó
            Reporter:
            Joan Bruguera Micó
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: