SERVER-114543 CollectionCatalog can't replace a collection with a view in the same WriteUnitOfWork (#44532)

GitOrigin-RevId: ec7748d30f07d308bbcc9ba011d1df88a6b4ac5a